--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,249 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="130dp">
+        <TextView
+            android:id="@+id/result_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="22sp"
+            android:layout_marginVertical="20dp"
+            android:layout_marginHorizontal="20dp"
+            android:textColor="@color/black"/>
+    </ScrollView>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/mainET"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textAlignment="center"
+        android:textSize="22sp"
+        android:layout_marginVertical="20dp"
+        android:layout_marginHorizontal="20dp"
+        android:inputType="numberDecimal"/>
+    <TableRow>
+        <ImageView
+            android:id="@+id/plus_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/increase_value_foreground"
+            android:layout_weight="0.25"
+            android:onClick="operationsListener"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/minus_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/decrease_value_foreground"
+            android:layout_weight="0.25"
+            android:onClick="operationsListener"/>
+
+        <ImageView
+            android:id="@+id/multiply_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/multiply_value_foreground"
+            android:layout_weight="0.25"
+            android:onClick="operationsListener"/>
+
+        <ImageView
+            android:id="@+id/divide_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/divide_value_foreground"
+            android:layout_weight="0.25"
+            android:onClick="operationsListener"/>
+    </TableRow>
+
+    <TableRow>
+
+        <Button
+            android:id="@+id/seven_btn"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:fontFamily="sans-serif"
+            android:onClick="numbersListener"
+            android:text="7"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:cornerRadius="20dp"
+            android:layout_weight="0.3"/>
+
+        <Button
+            android:id="@+id/eight_btn"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:fontFamily="sans-serif"
+            android:onClick="numbersListener"
+            android:text="8"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:cornerRadius="20dp"
+            android:layout_weight="0.3"/>
+
+        <Button
+            android:id="@+id/nine_btn"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:fontFamily="sans-serif"
+            android:onClick="numbersListener"
+            android:text="9"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:cornerRadius="20dp"
+            android:layout_weight="0.3"/>
+
+
+
+    </TableRow>
+    <TableRow>
+
+        <Button
+            android:id="@+id/four_btn"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:fontFamily="sans-serif"
+            android:onClick="numbersListener"
+            android:text="4"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:cornerRadius="20dp"
+            android:layout_weight="0.3"/>
+
+        <Button
+            android:id="@+id/five_btn"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:fontFamily="sans-serif"
+            android:onClick="numbersListener"
+            android:text="5"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:cornerRadius="20dp"
+            android:layout_weight="0.3"/>
+
+        <Button
+            android:id="@+id/six_btn"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:fontFamily="sans-serif"
+            android:onClick="numbersListener"
+            android:text="6"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:cornerRadius="20dp"
+            android:layout_weight="0.3"/>
+
+
+
+    </TableRow>
+    <TableRow>
+
+        <Button
+            android:id="@+id/one_btn"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:fontFamily="sans-serif"
+            android:onClick="numbersListener"
+            android:text="1"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:cornerRadius="20dp"
+            android:layout_weight="0.3"/>
+
+        <Button
+            android:id="@+id/two_btn"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:fontFamily="sans-serif"
+            android:onClick="numbersListener"
+            android:text="2"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:cornerRadius="20dp"
+            android:layout_weight="0.3"/>
+
+        <Button
+            android:id="@+id/three_btn"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:fontFamily="sans-serif"
+            android:onClick="numbersListener"
+            android:text="3"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:cornerRadius="20dp"
+            android:layout_weight="0.3"/>
+
+
+
+    </TableRow>
+    <TableRow>
+
+        <Button
+            android:id="@+id/comma_btn"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:fontFamily="sans-serif"
+            android:onClick="numbersListener"
+            android:text=","
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:cornerRadius="20dp"
+            android:layout_weight="0.3"/>
+
+        <Button
+            android:id="@+id/zero_btn"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:fontFamily="sans-serif"
+            android:onClick="numbersListener"
+            android:text="0"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:cornerRadius="20dp"
+            android:layout_weight="0.3"/>
+
+        <Button
+            android:id="@+id/reset_btn"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:fontFamily="sans-serif"
+            android:onClick="numbersListener"
+            android:text="C"
+            android:textColor="@color/dark_red"
+            android:textSize="25sp"
+            app:cornerRadius="20dp"
+            android:layout_weight="0.3"/>
+    </TableRow>
+</TableLayout>
